--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,13 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
+    //compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
+    compile 'com.google.android.gms:play-services-ads:9.4.0'
+    compile 'com.google.android.gms:play-services-auth:9.2.1'
+    compile 'com.google.android.gms:play-services-gcm:9.2.1'
+    compile files('libs/joda-time-2.1.jar')
 }
