--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     //compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     //compile files('libs/joda-time-2.1.jar')
     compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:support-compat:24.2.1'
     compile 'com.android.support:design:24.2.0'
     compile 'com.google.android.gms:play-services:9.4.0'
     compile 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
