Db helper modified

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,12 @@
      The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
      Google Maps Android API v2, but you must specify either coarse or fine
      location permissions for the 'MyLocation' functionality.
--->
+    -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-
 
     <uses-library android:name="com.google.android.maps" />
 
@@ -47,10 +45,8 @@
         <activity
             android:name=".MultiMapDemoActivity"
             android:label="MultiMap"
-
             android:parentActivityName=".MainActivity"
             android:theme="@style/FullscreenTheme" />
-
         <activity
             android:name=".MapFullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -73,7 +69,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-
+        <activity android:name=".ListViewActivity" />
+        <activity android:name=".MyListViewActivity" />
+        <activity android:name=".CheckboxActivity"></activity>
     </application>
 
 </manifest>
