--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "lu.uni.ibrahimtahirou.fitpro"
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -25,14 +25,17 @@ dependencies {
     testCompile 'junit:junit:4.12'
     //compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     //compile files('libs/joda-time-2.1.jar')
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:support-compat:24.2.1'
-    compile 'com.android.support:design:24.2.0'
+    //compile 'com.android.support:appcompat-v7:24.2.0'
+    //compile 'com.android.support:support-compat:24.2.1'
+    //compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:support-compat:25.3.1'
+    compile 'com.android.support:design:25.3.1'
     compile 'com.google.android.gms:play-services:9.4.0'
     compile 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
     compile 'com.google.android.gms:play-services-ads:9.4.0'
     compile 'com.google.android.gms:play-services-auth:9.2.1'
     compile 'com.google.android.gms:play-services-gcm:9.2.1'
-    compile 'com.android.support:support-v4:24.2.0'
+    compile 'com.android.support:support-v4:25.3.1'
 }
